Form display and editing field

--- a/app/globals.css
+++ b/app/globals.css
@@ -78,3 +78,20 @@
 * {
   overscroll-behavior: none;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: #121212;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #555;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #242424;
+}
+
